--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  background-color: #ffffff;
   color: #333333;
+  background-color: var(--background-color);
 }
 
 .logo {
